[package]
name = "socket-pktinfo"
version = "0.3.0"
authors = ["pixsperdavid <david@pixsper.com>"]
edition = "2018"
rust-version = "1.70.0"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pixsper/socket-pktinfo"
repository = "https://github.com/pixsper/socket-pktinfo"
documentation = "https://docs.rs/socket-pktinfo"
keywords = ["sockets", "udp", "ip_pktinfo", "multicast"]
categories = ["network-programming"]
description = "Small library to allow cross-platform handling of IP_PKTINFO and IPV6_PKTINFO with socket2 crate"

[dependencies.socket2]
version = "0.5.8"
features = ["all"]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60.2"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_IO"
]

[target.'cfg(not(windows))'.dependencies.libc]
version = '0.2.174'

[dev-dependencies.network-interface]
version = '2.0.2'